Model API, ajax, input start style

--- a/web/scss/style.scss
+++ b/web/scss/style.scss
@@ -18,7 +18,7 @@
 //@import "base/globals";
 
 /* Components */
-//@import "components/alert";
+@import "components/input";
 
 /* Icludes */
 @import "includes/footer.scss";
