--- a/web/scss/base/_globals.scss
+++ b/web/scss/base/_globals.scss
@@ -1,143 +1,3 @@
-.title {
-  font-size: 39px;
-  line-height: 47px;
-  font-weight: $bold;
-}
-.sub-title {
-  font-size: 29px;
-  line-height: 35px;
-  font-weight: $bold;
-}
-.sub-text {
-  font-size: 21px;
-  line-height: 25px;
-  font-weight: $bold;
-}
-
-
-.text {
-  font-size: 19px;
-  line-height: 23px;
-  color: $text-white;
-  font-weight: $regular;
-  &--green {
-    color: $brand-green;
-  }
-  &--green-opacity {
-    color: $text-green;
-  }
-  &--blue {
-    color: $brand-blue;
-  }
-  &--blue-opacity {
-    color: $text-blue;
-  }
-  &--white {
-    color: $white;
-  }
-  &--white-opacity {
-    color: $text-white;
-  }
-  &--black {
-    color: $black;
-  }
-  &--fade-blue {
-    color: $text-blue;
-  }
-  &--normal {
-    font-size: 19px;
-    line-height: 23px;
-  }
-  &--small {
-    font-size: 16px;
-    line-height: 19px;
-  }
-}
-.flex-center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.main-btn {
-  display: flex;
-  margin-left: auto;
-  margin-right: auto;
-  border-radius: 45px;
-  text-decoration: none;
-  outline: none;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-  font-weight: $semi-bold;
-
-  height: 50px;
-  font-size: 16px;
-  line-height: 19px;
-  max-width: 250px;
-
-  background-color: $brand-green;
-  box-shadow: 0px 10px 30px fade-out($brand-green, 0.65);
-  color: $white;
-  &--sm {
-    height: 40px;
-    max-width: 100px;
-  }
-  &--lg {
-    height: 60px;
-    font-size: 18px;
-    line-height: 22px;
-  }
-  &--transparent {
-    background-color: $white;
-    box-shadow: 0px 10px 30px rgba(41, 41, 41, 0.2);
-  }
-  &--blue {
-    background-color: $brand-blue;
-  }
-  &--no-shadow {
-    box-shadow: none;
-  }
-}
-
-hr {
-  border-bottom: 0;
-  border-color: fade-out($brand-blue,0.9);
-  max-width: 80%;
-  &.line {
-
-  }
-}
-.w100 {
-  width: 100%!important;
-  max-width: 100%!important;
-}
-.no-border {
-  &--top {
-    border-bottom-left-radius: 0!important;
-    border-bottom-right-radius: 0!important;
-  }
-  &--r0 {
-    border-radius: 0!important;
-  }
-  &--bottom {
-    border-top-left-radius: 0!important;
-    border-top-right-radius: 0!important;
-  }
-}
-
-@include adaptive(lg) {
-
-}
-
-@include adaptive(md) {
-
-}
-
-@include adaptive(sm) {
-
+img {
+  max-width: 100%;
 }
