--- a/web/scss/components/_input.scss
+++ b/web/scss/components/_input.scss
@@ -1,28 +1,70 @@
 .input {
   position: relative;
   max-width: 400px;
-  margin: 0 auto;
+  margin: 13px auto 20px auto;
   width: 100%;
   &__status {
     position: absolute;
     right: 25px;
     z-index: 42;
-    top: 50%;
-    transform: translateY(-50%);
+    //top: 50%;
+    //transform: translateY(-50%);
+    top: 10px;
+    cursor: pointer;
 
-    &--img {
-
+    width: 40px;
+    height: 40px;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    &--error {
+      background-image: url(../../img/icon_close.svg);
+      & ~ input {
+        border-color: $red;
+      }
+      & ~ .input__error {
+        display: block;
+      }
     }
+    &--success {
+      background-image: url(../../img/icon_ok.svg);
+    }
+  }
+  &__error {
+    font-family: "Circle";
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    margin-top: 4px;
+    text-align: center;
+    color: $red;
+    display: none;
   }
   &__el {
     z-index: 40;
     border: 1px solid $black;
     border-radius: 6px;
     line-height: 56px;
-    padding: 0 70px 0 50px;
+    padding: 0 70px 0 15px;
     appearance: none;
     outline: none;
     width: 100%;
+    font-size: 18px;
+    color: $black;
+    letter-spacing: 5px;
+    &--code {
+      padding: 0 70px 0 50px;
+      background-image: url(../../img/icon_lock.svg);
+      background-repeat: no-repeat;
+      background-position: 15px center;
+    }
+    &--tel {
+      background-image: url(../../img/icon_phone.svg);
+      background-repeat: no-repeat;
+      background-position: 15px center;
+      &:hover,&:focus,&.texted {
+        background-image: none;
+      }
+    }
     &::placeholder {
       color: fade_out($black, 0.5);
     }
