--- a/web/scss/style.scss
+++ b/web/scss/style.scss
@@ -15,7 +15,7 @@
 /* Base */
 @import "base/grid";
 @import "base/base";
-//@import "base/globals";
+@import "base/globals";
 
 /* Components */
 @import "components/input";
