--- a/web/scss/components/_complete.scss
+++ b/web/scss/components/_complete.scss
@@ -24,8 +24,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
   }
   &__img {
+    width: 25px;
     &--block {
       background: $yellow;
       height: 60px;
