--- a/web/scss/sections/pari-match.scss
+++ b/web/scss/sections/pari-match.scss
@@ -60,7 +60,7 @@
       background-color: $white;
     }
     @media(max-width: $md-width) {
-      color: $black;
+      margin-top: 30px;
     }
   }
   &--main-text {
