--- a/web/scss/sections/pari-match.scss
+++ b/web/scss/sections/pari-match.scss
@@ -4,6 +4,8 @@
   min-height: 100vh;
   align-items: stretch;
   justify-content: space-evenly;
+  position: relative;
+  overflow: hidden;
   @media(max-width: $md-width) {
     justify-content: flex-end;
     background-color: $background-black;
