--- a/web/scss/sections/pari-match.scss
+++ b/web/scss/sections/pari-match.scss
@@ -46,8 +46,8 @@
     &--img {
       position: absolute;
       left: 50%;
-      top: 50%;
-      transform: translate(-50%,-50%);
+      top: 5%;
+      transform: translateX(-50%);
       z-index: 1;
       @media(max-width: $md-width) {
         top: 60px;
